--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -53,24 +53,24 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-/*
+
 $body-color                 : #fff;
 $background-color           : #fff;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
 $text-color                 : $dark-gray;
 $border-color               : $lighter-gray;
-MM https://github.com/academicpages/academicpages.github.io/issues/137 
+/*MM https://github.com/academicpages/academicpages.github.io/issues/137 
 https://github.com/anebz/anebz.github.io/commit/07c9a7701fb1fb8166e83a8d83351fd09b2f309f
 */
-
+/*
 $body-color                 : #252a34;
 $background-color           : #252a34;
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 15%);
 $text-color                 : #eaeaea;
 $border-color               : mix(#fff, $background-color, 20%);
-
+*/
 $primary-color              : #8cd2d5;
 $success-color              : #62c462;
 $warning-color              : #f89406;
