--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,5 @@
 <!-- start custom footer snippets -->
-<a href="/sitemap/">Sitemap</a>
+<!--a href="/sitemap/">Sitemap</a>
 <!-- end custom footer snippets -->
+<a href="https://madewithlove.org.in" target="_blank">Made with <span style="color: #e74c3c">&hearts;</span> in India</a>
+
