--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -15,8 +15,8 @@
   height: auto;
   /* sticky footer fix end */
   margin-top: 3em;
-  /*color: mix(#fff, $gray, 25%);*/
-   color: #236327
+  color: mix(#fff, $green, 25%);
+   /*color: #236327*/
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
