--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -15,7 +15,7 @@
   height: auto;
   /* sticky footer fix end */
   margin-top: 3em;
-  color: mix(#fff, $green, 25%);
+  color: mix(#fff, $green, 75%);
    /*color: #236327*/
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
@@ -50,7 +50,7 @@
   .fab,
   .far,
   .fal {
-    color: mix(#fff, $gray, 25%);
+    color: mix(#fff, $red, 25%);
   }
 }
 
