--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -117,7 +117,9 @@
       {% endif %}
       {% if author.wikipedia %}
         <li><a href="https://en.wikipedia.org/wiki/User:{{ author.wikipedia }}"><i class="fab fa-fw fa-wikipedia-w" aria-hidden="true"></i> Wikipedia</a></li>
-{% endif %}
+      {% endif %}
+      {% if author.gblogger %}
+        <li><a href="https://{{ author.gblogger }}"><i class="fab fa-gblogger" aria-hidden="true"></i> Blogger</a></li>
     </ul>
   </div>
 </div>
