--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -120,6 +120,7 @@
       {% endif %}
       {% if author.gblogger %}
         <li><a href="https://{{ author.gblogger }}"><i class="fab fa-fw fa-gblogger" aria-hidden="true"></i> Blogger</a></li>
+      {% endif %}
     </ul>
   </div>
 </div>
