--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,5 +1,5 @@
 <!-- start custom footer snippets -->
 <!--a href="/sitemap/">Sitemap</a>
 <!-- end custom footer snippets -->
-<a href="https://madewithlove.org.in" target="_blank">Made with <span style="color: #e74c3c">&hearts;</span> in India <i class="flag flag-india"></i> and a tiny bit in Canada</a>
+<a href="https://madewithlove.org.in" target="_blank">Made with <span style="color: #e74c3c">&hearts;</span> in India and a tiny bit in Canada</a>
 
