--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,5 +1,5 @@
 <!-- start custom footer snippets -->
 <!--a href="/sitemap/">Sitemap</a>
 <!-- end custom footer snippets -->
-<a href="https://madewithlove.org.in" target="_blank">Made with <span style="color: #e74c3c">&hearts;</span> in India &#127470;&#127475; and a tiny bit in Canada</a>
+<a href="https://madewithlove.org.in" target="_blank">Made with <span style="color: #e74c3c">&hearts;</span> in &#127470;&#127475; and a tiny bit in &#127464;&#127462;</a>
 
