--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -2,4 +2,4 @@
 <!--a href="/sitemap/">Sitemap</a>
 <!-- end custom footer snippets -->
 <a href="https://madewithlove.org.in" target="_blank">Made with <span style="color: #e74c3c">&hearts;</span> in &#127470;&#127475; and a tiny bit in &#127464;&#127462;</a>
-
+<!-- Referernce https://emojiguide.org/flags -->
